feature jib crane

--- a/_posts/Jib-Crane/2024-12-14-jibcrane.md
+++ b/_posts/Jib-Crane/2024-12-14-jibcrane.md
@@ -3,6 +3,7 @@ layout: post
 title:  "The Jib Crane"
 categories: [ Jekyll ]
 image: ./jibcrane2.jpg
+featured: true
 ---
 A year ago, I designed and built a jib crane in order to move our planter boxes over our deck railing. My wife designed the railing with planter box cradles on the outside and low down near the gutters. This would allow our tomato plants and other veggies to grow as tall as possible. And while the railing is designed to be removed, it is still hard to lift the planter boxes even with the railing removed. The entire crane was built from scratch using mostly scrap metal from around the shop. 
 
